MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/Expressionofinterest__c.object-meta.xml
<CustomObject>
    <description>Object to store Expression of Interest details (Potential buyer details)</description>
    <label>Expression of Interest</label>
    <nameField>
        <displayFormat>EOI-{0000}</displayFormat>
        <label>EOI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expression of Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>