MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expression of Interests</relationshipLabel>
    <relationshipName>Expression_of_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>