MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>A field to store the amount of EOI</description>
    <label>Amount</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>UnitType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1000000</fullName>
                <label>1,000,000</label>
            </value>
            <value>
                <fullName>5000000</fullName>
                <label>5,000,000</label>
            </value>
            <value>
                <fullName>10000000</fullName>
                <label>10,000,000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>