MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms__c</fullName>
    <formula>LEFT(
    TEXT(NumberofBedrooms__c),
    FIND(&quot; &quot;, TEXT(NumberofBedrooms__c)) - 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bedrooms</label>
    <type>Text</type>
</CustomField>