MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Broker_Allocation_Timer__c.field-meta.xml
<CustomField>
    <fullName>Broker_Allocation_Timer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Allocation Timer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>