MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/BrokerAgency__c.field-meta.xml
<CustomField>
    <fullName>BrokerAgency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BrokerAgency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expression of Interests (BrokerAgency)</relationshipLabel>
    <relationshipName>Expression_of_Interests1</relationshipName>
    <type>Lookup</type>
</CustomField>