MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/BrokerAgent__c.field-meta.xml
<CustomField>
    <fullName>BrokerAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Expression of Interests (Broker Agent)</relationshipLabel>
    <relationshipName>Expression_of_Interests1</relationshipName>
    <type>Lookup</type>
</CustomField>