MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Expression of Interests</relationshipLabel>
    <relationshipName>Expression_of_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>