MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Eligible_for_Refund__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Refund</label>
    <type>Checkbox</type>
</CustomField>