MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/EOI_Amount_AED__c.field-meta.xml
<CustomField>
    <fullName>EOI_Amount_AED__c</fullName>
    <label>EOI Amount AED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>