MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/EOI_Amount_By_Currency__c.field-meta.xml
<CustomField>
    <fullName>EOI_Amount_By_Currency__c</fullName>
    <description>This field contains EOI amount in received currency. Created this field for Legacy Data Migration.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EOI Amount By Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>