MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/EOI_Balance__c.field-meta.xml
<CustomField>
    <fullName>EOI_Balance__c</fullName>
    <formula>ROUND( EOI_Amount_AED__c ,2) - ROUND( TotalPaidAmount__c ,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EOI Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>