MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/EOI_Code_Legacy__c.field-meta.xml
<CustomField>
    <fullName>EOI_Code_Legacy__c</fullName>
    <description>This field is used to populate the EOI code generated by agents in the excel sheet, which are mannualy created codes. and this will be used temporarily, as soon as all the agents will start using Salesforce system, this field will be depricated.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EOI Code (Legacy)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>