MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/EOI_Range__c.field-meta.xml
<CustomField>
    <fullName>EOI_Range__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EOI Range</label>
    <referenceTo>EOI_Range__c</referenceTo>
    <relationshipLabel>Expression of Interests</relationshipLabel>
    <relationshipName>Expression_of_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>