MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/EOIComments__c.field-meta.xml
<CustomField>
    <fullName>EOIComments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EOI Comments</label>
    <type>TextArea</type>
</CustomField>