MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/EOIId__c.field-meta.xml
<CustomField>
    <fullName>EOIId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>EOI Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>