MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Evento_Check_In_Status__c.field-meta.xml
<CustomField>
    <fullName>Evento_Check_In_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Evento Check In Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>