MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Evento_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Evento_Event_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Evento Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>