MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Evento_Token_Number__c.field-meta.xml
<CustomField>
    <fullName>Evento_Token_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Evento Token Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>