MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units__c</fullName>
    <description>Field Specifically created for Modon Egypt to track the number of units on EOI level</description>
    <label>Number of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>