MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/NumberofBedrooms__c.field-meta.xml
<CustomField>
    <fullName>NumberofBedrooms__c</fullName>
    <label>Number of Bedrooms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
            <value>
                <fullName>1 Bedroom</fullName>
            </value>
            <value>
                <fullName>5 BHK</fullName>
            </value>
            <value>
                <fullName>2 Bedrooms</fullName>
            </value>
            <value>
                <fullName>6 BHK</fullName>
            </value>
            <value>
                <fullName>3 Bedrooms</fullName>
            </value>
            <value>
                <fullName>4 Bedrooms</fullName>
            </value>
            <value>
                <fullName>5 Bedrooms</fullName>
            </value>
            <value>
                <fullName>6 Bedrooms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>