MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Payment_Created_w_o_Signed_EOI_form__c.field-meta.xml
<CustomField>
    <fullName>Payment_Created_w_o_Signed_EOI_form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Created w/o Signed EOI form</label>
    <type>Checkbox</type>
</CustomField>