MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
                <default>true</default>
                <label>Online</label>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Cheque Payment</fullName>
                <isActive>false</isActive>
                <label>Cheque Payment</label>
            </value>
            <value>
                <fullName>Online Payment</fullName>
                <isActive>false</isActive>
                <label>Online Payment</label>
            </value>
            <value>
                <fullName>POS Payment</fullName>
                <isActive>false</isActive>
                <label>POS Payment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>