MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phase</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <filterItems>
            <field>Phase__c.Source_Entity__c</field>
            <operation>equals</operation>
            <value>Modon - Egypt</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Modon Egypt - Sales Management</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>notEqual</operation>
            <value>Modon Egypt - Sales Management</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Phase__c</referenceTo>
    <relationshipLabel>Expression of Interests</relationshipLabel>
    <relationshipName>Expression_of_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>