MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Pre_Approval_Number__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pre Approval Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>