MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Secondary_Agent__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Agent__c</fullName>
    <description>This will store the information of secondary owner.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Agent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>