MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/SecurityCheckCompleted__c.field-meta.xml
<CustomField>
    <fullName>SecurityCheckCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A field to check whether a security check has been done on the buyer or not</description>
    <label>Security Check Completed</label>
    <type>Checkbox</type>
</CustomField>