MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Skip_SLA__c.field-meta.xml
<CustomField>
    <fullName>Skip_SLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip SLA</label>
    <type>Checkbox</type>
</CustomField>