MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/SLA_Voided_Reason__c.field-meta.xml
<CustomField>
    <fullName>SLA_Voided_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SLA Voided Reason</label>
    <type>TextArea</type>
</CustomField>