MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Source_Entity__c.field-meta.xml
<CustomField>
    <fullName>Source_Entity__c</fullName>
    <description>Field for Modon Egypt</description>
    <formula>TEXT(Opportunity__r.Source_Entity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Entity</label>
    <type>Text</type>
</CustomField>