MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Sync_with_Evento__c.field-meta.xml
<CustomField>
    <fullName>Sync_with_Evento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync with Evento</label>
    <type>Checkbox</type>
</CustomField>