MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Timer_Display_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Timer_Display_Expiry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Timer Display Expiry</label>
    <type>DateTime</type>
</CustomField>