MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Total_Authorize_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Authorize_Amount__c</fullName>
    <label>Total Authorize Amount</label>
    <summarizedField>CreditCardToken__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>CreditCardToken__c.Status__c</field>
        <operation>equals</operation>
        <value>Authorized</value>
    </summaryFilterItems>
    <summaryForeignKey>CreditCardToken__c.Expression_of_Interest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>