MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/TotalPaidAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalPaidAmount__c</fullName>
    <label>Total Paid Amount</label>
    <summarizedField>EOI_Allocation__c.Allocation_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>EOI_Allocation__c.Status__c</field>
        <operation>equals</operation>
        <value>Applied</value>
    </summaryFilterItems>
    <summaryForeignKey>EOI_Allocation__c.Expression_of_Interest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>