MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Typology_Details__c.field-meta.xml
<CustomField>
    <fullName>Typology_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Typology Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>