MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/UAE_Resident_Status__c.field-meta.xml
<CustomField>
    <fullName>UAE_Resident_Status__c</fullName>
    <formula>TEXT(Contact__r.UAE_Resident_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UAE_Resident_Status</label>
    <type>Text</type>
</CustomField>