MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Unit_Typology__c.field-meta.xml
<CustomField>
    <fullName>Unit_Typology__c</fullName>
    <description>This field contains Typology Details on EOI for selected Units. Modon Egypt team using this.</description>
    <inlineHelpText>This field contains Typology Details on EOI for selected Units.</inlineHelpText>
    <label>Unit Typology</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APT-Luxury-1 BED</fullName>
            </value>
            <value>
                <fullName>APT-Luxury-2 BED</fullName>
            </value>
            <value>
                <fullName>APT-Luxury-3 BED</fullName>
            </value>
            <value>
                <fullName>APT-Premium-1 BED</fullName>
            </value>
            <value>
                <fullName>APT-Premium-2 BED</fullName>
            </value>
            <value>
                <fullName>APT-Premium-3 BED</fullName>
            </value>
            <value>
                <fullName>APT-Ultra Luxury-2 BED</fullName>
            </value>
            <value>
                <fullName>APT-Ultra Luxury-3 BED</fullName>
            </value>
            <value>
                <fullName>APT-Ultra Luxury-4 BED</fullName>
            </value>
            <value>
                <fullName>TH-Corner-4 Bed-Premium</fullName>
            </value>
            <value>
                <fullName>TH-Middle-3 Bed-Premium</fullName>
            </value>
            <value>
                <fullName>Townhouse Corner</fullName>
            </value>
            <value>
                <fullName>Townhouse Middle</fullName>
            </value>
            <value>
                <fullName>Villa-5 Bed-Luxury</fullName>
            </value>
            <value>
                <fullName>Villa-5 Bed-Ultra Luxury</fullName>
            </value>
            <value>
                <fullName>Villa-7 Bed-Luxury</fullName>
            </value>
            <value>
                <fullName>Villa-7 Bed-Ultra Luxury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>