MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/UnitType__c.field-meta.xml
<CustomField>
    <fullName>UnitType__c</fullName>
    <description>A field to specify the type or classification of units being interested in by the party</description>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Standalone</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Town House</fullName>
            </value>
            <value>
                <fullName>Townhomes</fullName>
            </value>
            <value>
                <fullName>Twin</fullName>
            </value>
            <value>
                <fullName>Mansions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>