MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/UnitTypologyMRE__c.field-meta.xml
<CustomField>
    <fullName>UnitTypologyMRE__c</fullName>
    <label>Unit Typology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mild Unit Town Houses</fullName>
            </value>
            <value>
                <fullName>End Unit Town Houses</fullName>
            </value>
            <value>
                <fullName>Select Villas</fullName>
            </value>
            <value>
                <fullName>Second Row Villa</fullName>
            </value>
            <value>
                <fullName>Front Row Villa</fullName>
            </value>
            <value>
                <fullName>Front Row Premium Villa</fullName>
            </value>
            <value>
                <fullName>Golf Mansions</fullName>
            </value>
            <value>
                <fullName>Fairway Villa</fullName>
            </value>
            <value>
                <fullName>Range Villas</fullName>
            </value>
            <value>
                <fullName>Range Villas</fullName>
            </value>
            <value>
                <fullName>Golf Homes</fullName>
            </value>
            <value>
                <fullName>Golf Townhomes</fullName>
            </value>
            <value>
                <fullName>Par 3</fullName>
            </value>
            <value>
                <fullName>Par 4</fullName>
            </value>
            <value>
                <fullName>Fairway Villas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>