MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Void_Reason__c.field-meta.xml
<CustomField>
    <fullName>Void_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Void Reason</label>
    <type>TextArea</type>
</CustomField>