MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boulevard</fullName>
            </value>
            <value>
                <fullName>Beach Plaza</fullName>
            </value>
            <value>
                <fullName>Lighthouse</fullName>
            </value>
            <value>
                <fullName>Montage</fullName>
            </value>
            <value>
                <fullName>Wadi West</fullName>
            </value>
            <value>
                <fullName>Wadi East</fullName>
            </value>
            <value>
                <fullName>Golf Links</fullName>
            </value>
            <value>
                <fullName>Nammos Residences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>