MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/validationRules/Payment_Status_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Status_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PaymentStatus__c , &quot;Not Paid&quot;),

    ISPICKVAL(Status__c , &quot;Completed&quot;),

    ISCHANGED(Status__c)
)</errorConditionFormula>
    <errorMessage>Status cannot be changed to Completed when Payment Status is Not Paid.</errorMessage>
</ValidationRule>