MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/listViews/All_Legacy_Egypt_EOI.listView-meta.xml
<ListView>
    <fullName>All_Legacy_Egypt_EOI</fullName>
    <columns>NAME</columns>
    <columns>EOI_Code_Legacy__c</columns>
    <columns>EOI_Amount__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Opportunity__c</columns>
    <columns>Number_of_Units__c</columns>
    <columns>Preferred_Payment__c</columns>
    <columns>PaymentStatus__c</columns>
    <columns>Status__c</columns>
    <columns>UnitType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EOI_Code_Legacy__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Legacy Egypt EOI</label>
    <sharedTo>
        <group>Modon_Egypt_Users_Group</group>
    </sharedTo>
</ListView>