MODON MRE BPDEV/force-app/main/default/objects/Expressionofinterest__c/listViews/Brokers_EOI.listView-meta.xml
<ListView>
    <fullName>Brokers_EOI</fullName>
    <columns>NAME</columns>
    <columns>EOIId__c</columns>
    <columns>Account__c</columns>
    <columns>EOI_Amount_AED__c</columns>
    <columns>BrokerAgent__c</columns>
    <columns>BrokerAgency__c</columns>
    <columns>ProjectName__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BrokerAgency__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Brokers EOI</label>
</ListView>